--- a/K.html
+++ b/K.html
@@ -11,8 +11,8 @@
     --bg2: #081226;
     --card: rgba(255,255,255,0.03);
     --glass: rgba(255,255,255,0.04);
-    --accent: #FFD166;
-    --accent-2:#FF9F1C;
+    --accent: #FF0000;
+    --accent-2:#FF0000;
     --muted:#9aa3b2;
     --success:#4cd964;
     --danger:#ff6b6b;
